# lang-learn

./: .gitignore  main.py  pyproject.toml
adaptive-rag/: main.py
adaptive-rag/graph/: instructions.py  schemas.py  service.py  state.py
adaptive-rag/graph/nodes/: check_hallucination.py  condition.py  doc_grader.py  generate_answer.py  generator.py  grade_answer.py  grade_documents.py  hallucanation_check.py  retrieve.py  retriever.py  route_question.py  router.py  web_search.py  web_searcher.py
adaptive-rag/sample-data/: ingestion.py
adaptive-rag/sample-data/facts/: fact1.txt
adaptive-rag/sample-data/qdrant/: docker-compose.yml
adaptive-rag/utility/: __init__.py  formatter.py  init_model.py  qdrant_manger.py
langchain/: Summary.py  init_model.py  output_parse.py  output_parse_2.py  react-chain-bind-tools.py  react-chain.py  react-search-agent.py  sturctureresponse.json  test.py
langchain/intro-to-vector-dbs/: Retrieval.py  ingestion.py  init_model.py  medium-blog.txt  retrieval-diy.py
langgraph/: conditional_edge.py  init_model.py  multi_tool_calls.py  multi_tool_calls_2.py  plan_and_excute.py  response-test.py
